# telegram-mcp-server

./: .dockerignore  .env.example  Caddyfile  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  session_string_generator.py
.githooks/: pre-commit
rfcs/: 00_init.md  01_implementation.md  02_auth.md  03_deployment.md  04_message_readability.md
scripts/: call_tool.py
telegram_mcp_server/: client.py  ids.py  server.py  settings.py  yaml_utils.py
telegram_mcp_server/models/: base.py  chat.py  entity.py  message.py  user.py
telegram_mcp_server/tools/: chats.py  entities.py  media.py  messages.py  send.py  users.py
tests/: test_chat_model.py  test_chats_tool.py  test_entities_tool.py  test_entity_model.py  test_ids.py  test_media_tool.py  test_message_model.py  test_messages_tool.py  test_search_chats_tool.py  test_search_messages_tool.py  test_send_tool.py  test_user_model.py  test_users_tool.py  test_yaml_utils.py
