[project]
name = "telegram-mcp-server"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.3.1",
    "pydantic-settings>=2.14.0",
    "pyyaml>=6.0.3",
    "telegramify-markdown>=1.1.2",
    "telethon>=1.43.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
telegram-mcp-server = "main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
# FBT: bool positional args are intentional in MCP tool signatures.
# TC: TYPE_CHECKING guards add boilerplate for no real benefit in a server app.
# ASYNC240: we use asyncio, not trio/anyio.
# C901: session_string_generator complexity is inherent to interactive flows.
ignore = ["FBT001", "FBT002", "TC001", "TC002", "TC003", "ASYNC240", "C901"]
